Bug 255920 - [WTR] Watchdog timer should not default to zero seconds
Summary: [WTR] Watchdog timer should not default to zero seconds
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Tools / Tests (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Alicia Boya García
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-04-25 07:00 PDT by Alicia Boya García
Modified: 2023-04-25 09:15 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alicia Boya García 2023-04-25 07:00:40 PDT
TestInvocation::m_timeout can have two special values: zero, for a
default timeout, and -1 for no timeout.

The current implementation of
initializeWaitToDumpWatchdogTimerIfNeeded() was not taking this into
consideration, which caused tests to immediately timeout (0 second
timeout) when invoking WebKitTestRunner without --no-timeout.

* Tools/WebKitTestRunner/TestInvocation.cpp:
(WTR::TestInvocation::initializeWaitToDumpWatchdogTimerIfNeed
Comment 1 Alicia Boya García 2023-04-25 07:02:21 PDT
Pull request: https://github.com/WebKit/WebKit/pull/13146
Comment 2 EWS 2023-04-25 09:14:25 PDT
Committed 263374@main (0f7e57b5ef16): <https://commits.webkit.org/263374@main>

Reviewed commits have been landed. Closing PR #13146 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2023-04-25 09:15:22 PDT
<rdar://problem/108507123>