[WTR] Watchdog timer should not default to zero seconds https://bugs.webkit.org/show_bug.cgi?id=255920

Reviewed by Carlos Garcia Campos.

TestInvocation::m_timeout can have two special values: zero, for a
default timeout, and -1 for no timeout.

The current implementation of
initializeWaitToDumpWatchdogTimerIfNeeded() was not taking this into
consideration, which caused tests to immediately timeout (0 second
timeout) when invoking WebKitTestRunner without --no-timeout.

* Tools/WebKitTestRunner/TestInvocation.cpp:
(WTR::TestInvocation::initializeWaitToDumpWatchdogTimerIfNeeded):

Canonical link: https://commits.webkit.org/263374@main